force background images to disappear below certain screen widths. Allow header text div to handle its own height once screen becomes narrow to prevent overflow

--- a/open_fmri/assets/css/styles.css
+++ b/open_fmri/assets/css/styles.css
@@ -6,6 +6,7 @@
     background: rgba(0, 0, 0, 0) url("../images/banner_bg.png") repeat-x scroll center top;
 }
 
+   
 #container-header {
     position: relative;
 }
@@ -272,3 +273,17 @@ ol {
         display: none;
 }
 
+@media(max-width: 768px) {
+    #container-bg-front {
+        background: none;
+    }
+    
+    #header-banner {
+        position: relative;
+        padding-top: 0;
+        margin: 0 auto;
+    }
+        
+    .header-block {
+        height: auto;
+}
